--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>My Cool Website</title>
+      <title>My Notes</title>
    </head>
    <body>
-      <h1>Welcome to my website! ⭐️</h1>
-      <p>How was your day? 🎉</p>
+      <a href="https://github.com/danniefairy/CoreKnowledge/tree/main/Algorithm/Amazon">notes</a>
    </body>
 </html>
