--- a/index.html
+++ b/index.html
@@ -4,6 +4,26 @@
       <title>My Notes</title>
    </head>
    <body>
-      <a href="https://github.com/danniefairy/CoreKnowledge/tree/main/Algorithm/Amazon">notes</a>
+      <h1>Programming Language</h1>
+      <hr>
+      <h2>Golang</h2>
+      <ul>
+         <li>Basic Concept</li>
+         <ul>
+             <li><a href="https://github.com/danniefairy/CoreKnowledge/blob/main/Programming%20Language/GO/practice/notes.txt#L1-L14">Pros&Cons</a></li>
+             <li><a href="https://github.com/danniefairy/CoreKnowledge/blob/main/Programming%20Language/GO/practice/notes.txt#L16-L34">Performance Optimization</a></li>
+             <li><a href="https://github.com/danniefairy/CoreKnowledge/blob/main/Programming%20Language/GO/practice/notes.txt#L36-L71">Web DB Tips</a></li>
+             <li><a href="https://github.com/danniefairy/CoreKnowledge/blob/main/Programming%20Language/GO/practice/notes.txt#L73-L80">Anti-Pattern</a></li>
+             <li><a href="https://github.com/danniefairy/CoreKnowledge/blob/main/Programming%20Language/GO/practice/notes.txt#L82-L101">TDD/DDD</a></li>
+         </ul>
+         <li>Examples</li>
+         <ul>
+             <li><a href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/bufio">bufio</a></li>
+         </ul>
+     </ul>
+
+
+
+      
    </body>
 </html>
