--- a/index.html
+++ b/index.html
@@ -18,8 +18,20 @@
          </ul>
          <li>Examples</li>
          <ul>
-             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/bufio">bufio</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/gomod">gomod</a></li>
              <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/error">error</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/package">package</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/function">function</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/struct_interface">struct/interface</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/goroutine">goroutine</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/type_enum">type/enum</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/test/unittest">unittest</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/godog">godog(cucumber style)</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/reflect">reflect</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/grpc">grpc</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/bufio">bufio</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/http">http</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/examples">Web/DB example</a></li>
          </ul>
      </ul>
 
