--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
              <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Programming%20Language/GO/practice/notes.txt#L73-L80">Anti-Pattern</a></li>
              <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Programming%20Language/GO/practice/notes.txt#L82-L101">TDD/DDD</a></li>
          </ul>
-         <li>Examples</li>
+         <li>Example Code</li>
          <ul>
              <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/gomod">gomod</a></li>
              <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/error">error</a></li>
