--- a/index.html
+++ b/index.html
@@ -18,22 +18,40 @@
          </ul>
          <li>Example Code</li>
          <ul>
-             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/gomod">gomod</a></li>
-             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/error">error</a></li>
-             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/package">package</a></li>
-             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/function">function</a></li>
-             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/struct_interface">struct/interface</a></li>
-             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/goroutine">goroutine</a></li>
-             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/type_enum">type/enum</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/gomod">Gomod</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/error">Error</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/package">Package</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/function">Function</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/struct_interface">Struct/Interface</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/goroutine">Goroutine</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/type_enum">Type/Enum</a></li>
              <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/test/unittest">unittest</a></li>
-             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/godog">godog(cucumber style)</a></li>
-             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/reflect">reflect</a></li>
-             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/grpc">grpc</a></li>
-             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/bufio">bufio</a></li>
-             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/http">http</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/godog">Godog(cucumber style)</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/reflect">Reflect</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/grpc">Grpc</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/bufio">Bufio</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/http">Http</a></li>
              <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/examples">Web/DB example</a></li>
          </ul>
      </ul>
+
+     <h2>Python</h2>
+     <ul>
+        <li>Example Code</li>
+        <ul>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/oop">OOP</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/import">Import</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/argparse.py">Argparse</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/context_manager.py">Context Manager</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/decorator.py">Decorator</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/lambda_map_filter_reduce.py">Lambda</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/try_except_else_finally.py">Try/Except/Else/Finally</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/iterator">Iterator/Generator</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/logging">Logging</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/rabbitmq">RabbitMQ</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/redis">Redis</a></li>
+        </ul>
+    </ul>
 
 
 
