--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
              <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Programming%20Language/GO/practice/notes.txt#L36-L71">Web DB Tips</a></li>
              <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Programming%20Language/GO/practice/notes.txt#L73-L80">Anti-Pattern</a></li>
              <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Programming%20Language/GO/practice/notes.txt#L82-L101">TDD/DDD</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Languages/Golang.txt">Interview Highlight</a></li>
          </ul>
          <li>Example Code</li>
          <ul>
@@ -92,6 +93,67 @@
  
            </ul>
    </ul>
+
+   <br>
+   <h1>Foundamental Knowledge</h1>
+   <hr>
+   <h2>Operating System</h2>
+   <ul>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/OS/os.txt">Operating System</a></li>
+    </ul>
+    <h2>Networking</h2>
+    <ul>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Network/network.txt">Networking</a></li>
+    </ul>
+    <h2>Database</h2>
+    <ul>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/DB/db.txt">Database</a></li>
+    </ul>
+    <h2>Data Science</h2>
+    <ul>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Data%20Science/Machine%20Learning/Machine%20Learning%20Concept.txt#L1-L40">Feature Engineering</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Data%20Science/Machine%20Learning/Machine%20Learning%20Concept.txt#L43-L102">Statistics/Training Tips</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Data%20Science/Machine%20Learning/Machine%20Learning%20Concept.txt#L105-L144">Models</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Data%20Science/Machine%20Learning/Machine%20Learning%20Concept.txt#L147-L172">Evaluations</a></li>
+    </ul>
+    <h2>DevOps</h2>
+    <ul>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/DevOps/devops.txt#L1-L107">Overview(Kubernate/Ansible/AWS Networking/Monitoring)</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/DevOps/devops.txt#L109-L188">Service Protocol</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/DevOps/devops.txt#L190-L272">Security</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/DevOps/AWS/AWS%20Certified%20Cloud%20-%20Practitioner%20Course/highlight.txt">AWS Overview</a></li>
+    </ul>
+    <h2>Test</h2>
+    <ul>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Test/Test%20Concept.txt#L299-L315">Overall Process For Development</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Test/Test%20Concept.txt#L182-L196">Stub/Mock/Fake</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Test/Test%20Concept.txt#L212-L257">Refactoring</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Test/Test%20Concept.txt#L129-L137">Unit Test</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Test/Test%20Concept.txt#L197-L211">Integration Test</a></li>
+    </ul>
+    <h2>OOP</h2>
+    <ul>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/OOP/SOLID.txt">SOLID</a></li>
+        <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/OOP/OOP.txt">Overview(with Interview Tips)</a></li>
+    </ul>
+    <h2>System Design</h2>
+    <ul>
+        <li>Overview</li>
+        <ul>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/System%20Design/Mastering%20the%20System%20Design%20Interview/notes.txt">Components</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/System%20Design.txt#L1-L95">Interview Framework</a></li>
+        </ul>
+        <li>Use Cases</li>
+        <ul>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/System%20Design.txt#L98-L99">Hot Spot Problem</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/System%20Design.txt#L100-L120">E-Commerce Problem</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/System%20Design.txt#L121-L171">Social Media Problem</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/System%20Design.txt#L172-L207">Taxi Application Problem</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/System%20Design.txt#L208-L252">Chat Application Problem</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/System%20Design.txt#L253-L261">Stock Exchange Problem</a></li>
+        </ul>
+
+     </ul>
 
    </body>
 </html>
