--- a/index.html
+++ b/index.html
@@ -152,7 +152,31 @@
             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/System%20Design.txt#L208-L252">Chat Application Problem</a></li>
             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/System%20Design.txt#L253-L261">Stock Exchange Problem</a></li>
         </ul>
+     </ul>
 
+     <br>
+     <h1>Coding</h1>
+     <hr>
+     <h2>Leetcode</h2>
+     <ul>
+        <li>Cheeting Sheet</li>
+        <ul>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Before%20Interview/Algorithm.txt">Cheeting Sheet</a></li>
+       </ul>
+       <li>Overview</li>
+       <ul>
+           <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Algorithm/notes.txt#L31-L93">Sliding Window</a></li>
+           <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Algorithm/notes.txt#L96-L167">Dynamic Programming</a></li>
+           <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Algorithm/notes.txt#L187-L211">Stack/Queue</a></li>
+           <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Algorithm/notes.txt#L335-L346">Game Theory</a></li>
+           <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Algorithm/notes.txt#L349-L383">Arithmetic Expression</a></li>
+           <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Algorithm/notes.txt#L225-L290">Common Array Problems</a></li>
+           <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Algorithm/notes.txt#L294-L332">Common Graph/Tree Problems</a></li>
+      </ul>
+      <li>Coding Examples</li>
+      <ul>
+          <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Algorithm/Basic">Examples</a></li>
+     </ul>
      </ul>
 
    </body>
