--- a/index.html
+++ b/index.html
@@ -179,5 +179,17 @@
      </ul>
      </ul>
 
+     <br>
+     <h1>Experience Tech Stack</h1>
+     <hr>
+     <h2>Work</h2>
+     <ul>
+          <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Others/Tech%20Stacks/Works.txt">Work</a></li>
+     </ul>
+     <h2>Side Project</h2>
+     <ul>
+          <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Others/Tech%20Stacks/Side_Projects.txt">Side Project</a></li>
+     </ul>
+
    </body>
 </html>
