--- a/index.html
+++ b/index.html
@@ -191,5 +191,10 @@
           <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Others/Tech%20Stacks/Side_Projects.txt">Side Project</a></li>
      </ul>
 
+     <br>
+     <h1>Behavioral</h1>
+     <hr>
+     <h3>Customize based on different companies</h3>
+
    </body>
 </html>
