--- a/index.html
+++ b/index.html
@@ -184,11 +184,11 @@
      <hr>
      <h2>Work</h2>
      <ul>
-          <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Others/Tech%20Stacks/Works.txt">Work</a></li>
+          <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Tech%20Stack/Works.txt">Work</a></li>
      </ul>
      <h2>Side Project</h2>
      <ul>
-          <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Others/Tech%20Stacks/Side_Projects.txt">Side Project</a></li>
+          <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Tech%20Stack/Side_Projects.txt">Side Project</a></li>
      </ul>
 
      <br>
