--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>My Notes</title>
+      <title>Notes</title>
    </head>
    <body>
+      <h1>Content</h1>
+        <hr>
+        <p>This is my personal technical notes for interview preparation</p>
+        <p>For the notes of my work, those will de stored in On-Premise storage</p>
+
+      <br>
       <h1>Programming Language</h1>
       <hr>
       <h2>Golang</h2>
