--- a/index.html
+++ b/index.html
@@ -202,5 +202,40 @@
      <hr>
      <h3>Customize based on different companies</h3>
 
+     <br>
+     <h1>Documentation</h1>
+     <hr>
+     <h2>Technical Requirement Documentation</h2>
+     <ul>
+        <li>Summary</li>
+        <li>Functional Requirement</li>
+        <ul>
+            <li>Business Model(Workflow/Sequence Diagram)</li>
+            <li>Data Model(Database/Data Schema)</li>
+            <li>High Level Architecture</li>
+        </ul>
+        <li>Nonfunctional Requirement</li>
+        <ul>
+            <li>Reliability(Latency/Scalability/Rate Limit/Fault Toleration)</li>
+            <li>Security(Data/User)</li>
+        </ul>
+     </ul>
+     <h2>API Documentation</h2>
+     <ul>
+        <li>Use Case Explanation</li>
+        <li>Request</li>
+        <ul>
+            <li>Method</li>
+            <li>Data Type</li>
+            <li>Example</li>
+        </ul>
+        <li>Response</li>
+        <ul>
+            <li>Status Code</li>
+            <li>Data Type</li>
+            <li>Example</li>
+        </ul>
+     </ul>
+
    </body>
 </html>
