--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
              <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Programming%20Language/GO/practice/notes.txt#L36-L71">Web DB Tips</a></li>
              <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Programming%20Language/GO/practice/notes.txt#L73-L80">Anti-Pattern</a></li>
              <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Programming%20Language/GO/practice/notes.txt#L82-L101">TDD/DDD</a></li>
-             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Fundamental/Languages/Golang.txt">Interview Highlight</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Languages/Golang.txt">Interview Highlight</a></li>
          </ul>
          <li>Example Code</li>
          <ul>
@@ -39,6 +39,9 @@
              <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/bufio">Bufio</a></li>
              <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/http">Http</a></li>
              <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/examples">Web/DB example</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/type_checking">Type Checking</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/multi_producers_consumers">Multi Producers Consumers</a></li>
+             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/GO/practice/mutex">Mutex</a></li>
          </ul>
      </ul>
 
@@ -57,6 +60,10 @@
             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/logging">Logging</a></li>
             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/rabbitmq">RabbitMQ</a></li>
             <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/redis">Redis</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/Test">Unit/Functional Test</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/flask">Flask</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/tree/main/Programming%20Language/PYTHON/subprocess">Subprocess</a></li>
+            <li><a target="_blank" href="https://github.com/danniefairy/CoreKnowledge/blob/main/Interview/Languages/Python.txt">Interview Highlight</a></li>
         </ul>
     </ul>
 
